# jira-proofs-xfce

./: README.md  meson.build
.github/workflows/: ci-windows.yml  ci.yml  release.yml
docs/superpowers/plans/: 2026-03-11-jira-r2-integration.md  2026-03-11-video-recording.md  2026-03-15-windows-port-phase1-2.md  2026-03-15-windows-port-phase3.md  2026-03-15-windows-port-phase4-5.md  2026-03-30-jira-multi-workspace.md
docs/superpowers/specs/: 2026-03-11-jira-r2-integration-design.md  2026-03-11-video-blur-editor-design.md  2026-03-11-video-recording-design.md  2026-03-15-windows-port-wizard-design.md  2026-03-30-jira-multi-workspace-design.md
installer/: screenshooter.nsi
lib/: libscreenshooter.h  meson.build  screenshooter-actions.c  screenshooter-actions.h  screenshooter-cloud-config.c  screenshooter-cloud-config.h  screenshooter-dialogs.c  screenshooter-global.h  screenshooter-jira-dialog.c  screenshooter-jira-dialog.h  screenshooter-jira.c  screenshooter-jira.h  screenshooter-r2.c  screenshooter-r2.h  screenshooter-recorder-dialog.c  screenshooter-recorder-dialog.h  screenshooter-recorder.c  screenshooter-recorder.h  screenshooter-video-editor-blur.c  screenshooter-video-editor-canvas.c  screenshooter-video-editor-canvas.h  screenshooter-video-editor-timeline.c  screenshooter-video-editor-timeline.h  screenshooter-video-editor.c  screenshooter-video-editor.h
lib/core/: meson.build  sc-cloud-config.c  sc-cloud-config.h  sc-jira.c  sc-jira.h  sc-r2.c  sc-r2.h  sc-recorder.c  sc-recorder.h  sc-video-editor-blur.c  sc-video-editor-blur.h
lib/platform/: meson.build  sc-platform-linux.c  sc-platform-windows.c  sc-platform.h
lib/ui-gtk/: libscreenshooter.h  meson.build  screenshooter-actions.c  screenshooter-dialogs.c  screenshooter-jira-dialog.c  screenshooter-jira-dialog.h  screenshooter-recorder-dialog.c  screenshooter-recorder-dialog.h  screenshooter-video-editor-canvas.h  screenshooter-video-editor-timeline.h  screenshooter-video-editor.c  screenshooter-wizard.c  screenshooter-wizard.h
lib/ui-win32/: meson.build  resource.h  resources.rc  win-main-dialog.c  win-main-dialog.h  win-video-editor.c  win-video-editor.h  win-wizard.c  win-wizard.h
panel-plugin/: meson.build
src/: main-win32.c  main.c  meson.build
test/: test-cloud-config-save.c  test-cloud.c  test-config-import.c  test-connection-validators.c  test-multi-workspace-config.c  test-render-blur.c  test-video-editor-blur.c  test-video-editor-integration.c
